--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,23 +6,26 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^4.0.4
-  flutter_bloc: ^8.0.1
+  dio: ^5.3.2
+  flutter_bloc: ^8.1.3
   json_annotation: ^4.8.1
   freezed_annotation: ^2.4.1
+  retrofit: ^4.0.1
+  get_it: ^7.6.4
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  flutter_lints: ^1.0.0
+  build_runner: ^2.4.6
+  flutter_lints: ^2.0.3
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.1
-  json_serializable: ^6.6.2
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
+  retrofit_generator: ^7.0.8
 
 flutter:
   uses-material-design: true
