--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   retrofit: ^4.0.1
   get_it: ^7.6.4
+  injectable: ^2.3.2
+  bloc: ^8.1.2
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -24,6 +26,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.4.5
+  injectable_generator: ^2.4.1
   json_serializable: ^6.7.1
   retrofit_generator: ^7.0.8
 
