--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
 dev_dependencies:
   bloc_test: ^9.1.0
   build_runner: ^2.3.2
+  flutter_test:
+    sdk: flutter
   flutter_lints: ^2.0.1
   test: ^1.22.0
   freezed: ^2.2.1
